# QPopCV

./: .gitattributes  .gitignore  LICENSE  QpopCV_gui.py  README.md  app.py  app_afk.py  config.json  config.py  main.py  pyproject.toml  requirements.txt  test_capture_region.py  updater.py  watcher.py
qpopcv/: __init__.py  app_ui.py  config.json  config.py  discord_client.py  theme.py  updater.py  validators.py  watcher.py
qpopcv/_internal/numpy-2.2.6.dist-info/: RECORD
test py/: privacy_mask.py
test_py/: QpopCV.py  test_watch_region.py
tools/: privacy_mask.py  show_watch_region.py
